<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#535352"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="@string/app_name">

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_movimento"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:text="@string/aggiungi_movimento"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <Button
        android:id="@+id/btn_listamovimenti"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/btn_movimento"
        android:layout_marginTop="5dp"
        android:text="@string/lista_movimenti"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/btn_filtra"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/btn_listamovimenti"
        android:layout_marginTop="5dp"
        android:text="Statistiche"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/btnLogout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="top"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_red_light"
        android:text="Disconnetti" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />





</RelativeLayout>